--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.pyc
+*.ipynb_checkpoints
 *.p
 *.csv
 .DS_Store
@@ -10,6 +11,7 @@ ehthumbs.db
 Thumbs.db
 *Figures
 *.png
+*.pdf
 Source/*~
 Unit/*~
 Unit/Unit_Inputs/*~
