--- a/Tests/Inputs/short_only.yaml
+++ b/Tests/Inputs/short_only.yaml
@@ -39,10 +39,10 @@ Boundary:
 Time:
     Run Time: 4.
     T Initial: 298.15
-    dt: 0.1
+    Output Frequency: 10
+    Target Error: 1.0e-12
     Print Progress: 0
 
 Other:
     Y Dimension: 0.12
     Z Dimension: 0.04
-    Reaction Only: 1
